...
    <string name="EnterPassword">Please enter a password</string>
    <string name="EnterRemotePath">Please enter a remote path</string>
    <string name="Host">Host</string>
    <string name="BackupPassword">Backup password</string>
    <string name="Search">Search</string>
    <string name="Backup">Backup</string>
    <string name="BackupStarted">Backup for %s started</string>
    <string name="ConnectionRemoved">Successfully deleted %s</string>
    <string name="Undo">Undo</string>
    <string name="OK">OK</string>
    <string name="AddNewAccount">Add new account</string>
    <string name="SelectedAccount">Selected account</string>
    <string name="FolderLink">Link to folder</string>
    <string name="Error">Error</string>
    <string name="Accounts">Accounts</string>
    <string name="More">More</string>
    <string name="ConnectionStillExists">There is still at least one connection that uses this account</string>
    <string name="EnterPath">Please enter a path</string>
    <string name="ErrorInternet">Internet connection wasn\'t available while backing up %s</string>
    <string name="EnterRepoId">Please enter a repo id</string>
    <string name="RepoId">RepoId</string>
    <string name="SeaFile" translatable="false">SeaFile</string>
...
