...
                onDismissRequest = {
                    menuExpanded = false
                }
            ) {
                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("DeleteMenuItem"),
                    onClick = {
                        delete()

                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
...
                        )
                    )
                }

                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("BackupMenuItem"),
                    onClick = {
                        backup()
                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
                        24.dp,
...
